--- a/about.html
+++ b/about.html
@@ -13,12 +13,12 @@
 
     <link rel="stylesheet" href="./Content/app.css">
 
-    <title>WEBD6201 - W2020 - Lesson 1 - Part 1</title>
+    <title>About</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">WEBD6201</a>
+      <a class="navbar-brand" href="index.html">WEBD6201</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="col">
         <main class="jumbotron" id="contentArea">
-          <h1 id="firstHeading" class="display-4 ">Hello, world!</h1>
+          <h1 id="firstHeading" class="display-4 ">About us!</h1>
           <hr class="my-4">
 
           
@@ -54,7 +54,7 @@
           
         </main>
         <section id="top_story">
-          <h3>Top Story</h3>
+          <h3>Who are we!</h3>
           <p id="story_one">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et auctor ex. Phasellus vitae sapien facilisis ante sagittis congue eu sed lectus. 
             Sed enim quam, pellentesque quis feugiat sed, convallis a est. Donec vulputate euismod porttitor. Fusce quis aliquet enim, non ultricies enim. Nulla eget tortor sem.
