the functions for opening a link with button has been created

--- a/services.html
+++ b/services.html
@@ -67,6 +67,13 @@
              eu rutrum dui. Proin sit amet ipsum scelerisque, finibus nisl efficitur, tempus turpis. Suspendisse vel interdum leo, 
              nec venenatis nisi. Donec quis luctus mauris. Sed eros eros, efficitur ac mi in, maximus posuere sapien.
           </p>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-dark list-group-item-action" aria-current="true">An active item</li>
+            <li class="list-group-item list-group-item-action">A second item</li>
+            <li class="list-group-item list-group-item-action">A third item</li>
+            <li class="list-group-item list-group-item-action">A fourth item</li>
+            <li class="list-group-item list-group-item-action">And a fifth one</li>
+          </ul>
 
         </section>
       </div>
@@ -74,7 +81,10 @@
 
   </div>
   <footer>
-    <p id="copy-right" >&copy;</p>
+    <nav class="navbar fixed-bottom navbar-light bg-light">
+      
+      <h4 class="display-4 navbar-brand">&copy; CopyRight 2021.</h4>
+    </nav> 
   </footer>
   
     
