--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="col">
         <main class="jumbotron" id="contentArea">
           <h1 id="firstHeading" class="display-4 ">Welcome to our site!</h1>
-          <button id="projectsButton" class="btn btn-dark">Current Projects</button>
+          <button id="projectsButton" class="btn btn-light">Current Projects</button>
           
           
           <hr class="my-4">
