--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,8 @@
                 <i class="fas fa-star-of-life fa-xs"></i>
                 <i class="fas fa-star-of-life fa-xs"></i>
                 <i class="fas fa-star-of-life fa-xs"></i>
-              </span><p id="warrning-message"> </p>
+              </span>
+              <p id="alert-message-name" class="warrning-message"> </p>
               <input name="name" type="text" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Full Name">
               <div id="emailHelp" class="form-text">We'll never share your Informat with anyone else.</div>
             </div>
@@ -68,13 +69,20 @@
                 <i class="fas fa-star-of-life fa-xs"></i>
                 <i class="fas fa-star-of-life fa-xs"></i>
               </span>
+              <p id="alert-message-email" class="warrning-message"> </p>
               <input name="email" type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="email@example.com">
               <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
-              <label for="contactNumber" class="form-label">Contact Number  &nbsp;</label>
-              <input name="number" type="tel" class="form-control" id="contactNumber" placeholder="(###)###-####">
-
+              <label for="number" class="form-label">Contact Number  &nbsp;</label>
+              <span class="star" id="number-star">
+                <i class="fas fa-star-of-life fa-xs"></i>
+                <i class="fas fa-star-of-life fa-xs"></i>
+                <i class="fas fa-star-of-life fa-xs"></i>
+              </span>
+              <p id="alert-message-number" class="warrning-message"> </p>
+              <input name="number" type="tel" class="form-control" id="number" placeholder="(###)###-####"  pattern="[0-9]+">
+              <div id="numberHellp" class="form-text">We'll never share your number with anyone else.</div>
             </div>
             <div class="mb-3">
               <label for="message" class="form-label">Your Message</label>
